Updated UI and Added Coverage Test Cases